# spacecharge-sim

./: .gitignore  CMakeLists.txt  README.md  image_combiner.py  ion_dist.py  main.C  multigrid.C  multigrid_analysis.ipynb  run_timekeeper.sh  timekeeper.C  timekeeping_analysis.ipynb
axisscan/: analysis.ipynb  efile.txt  pfile.txt
nogrid/: CMakeLists.txt  batch.sub  file_combiner.py  gain_analysis.ipynb  generate_args.py  image_combiner.py  nogrid.C  permutation_test.py  run.sh  size_no_sc_combined.txt  size_sc_combined.txt  time_analysis.ipynb
ppp/: CMakeLists.txt  all_runs.txt  file_combiner.py  gain_analysis.ipynb  generate_args.py  permutation_test.py  pp.C  run.sh
